Fixed positioning in modals by adding left-margin equal to the scrollbar width

--- a/css/modal.css
+++ b/css/modal.css
@@ -240,13 +240,27 @@
 
     .magic-wrapper {
         overflow-x: hidden;
+
+        position: relative;
     }
 
     .magic {
-        padding-right: 30px; /*Прячет скроллбар*/
+        /*Прячет скроллбар*/
+        /*padding-right: 30px; 
         width: 110%;
-        height: 100%;
+        height: 100%;*/
         overflow-y: auto;
+
+
+        padding-left: 30px;
+        padding-right: 30px;
+        
+        width: 112%;
+        height: 100%;
+        
+        position: absolute;
+        top: 0;
+        left: -6%;
 
         /*Выравнивает контент, отцентрованный с использованием флекс*/
         /*padding-left: 30px; 
